template/discuzx5/common/extend_common.css
/* ... */
.tb li {margin-right:12px;position:relative}
.tb a {padding:0 15px;font-size:14px;border:1px solid var(--dz-borderb);background:var(--dz-bgc);font-weight:400;border-radius:var(--dz-radius-s) var(--dz-radius-s) 0 0}
.tb .a a, .tb .current a {border-bottom-color:var(--dz-bgf);background:var(--dz-bgf);color:var(--dz-color);font-weight:400}
.tb .y {margin-left:10px;margin-right:0}
.tb .y a {padding:0 2px;font-size:13px !important}
.tb .y select {float:right;padding-right:0;margin:0 0 0 10px;padding:0 8px;min-height:30px;height:30px;line-height:30px;font-size:13px}
.tb .o {float:right;margin:0;border:none}
.tb .o, .tb .o a {height:30px;line-height:30px;font-size:13px;background:none;border-radius:var(--dz-radius-b)}
.tb .o a {padding:0 15px;border:none;font-weight:400;background:var(--dz-btnbg);color:var(--dz-btntxt)}
.tb .o a:hover {opacity:0.8}
.tb_s {line-height:30px;padding-left:8px}
.tb_s li {margin-right:8px}
.tb_s a {padding:0 10px}

.dz_tbnva .dz_uactive_box_share .tb, .dz_tbnva .dz_uactive_box .kmtb {padding-bottom:10px;border-bottom:1px solid var(--dz-borderb)}
.dz_tbnvb .tb {height:40px;line-height:20px;padding-left:0}
.dz_tbnvb .tb li {margin:0 20px 0 5px;height:40px;min-width:18px;text-align:center}
.dz_tbnvb .tb a {background:none;font-size:15px;border:none;padding:0}
.dz_tbnvb .tb .a:after, .dz_tbnvb .tb .current:after {content:"";position:relative;bottom:-18px;display:flex;margin:0 auto;width:100%;height:2px;background:var(--dz-color);border-radius:var(--dz-radius-x)}
.dz_tbnvb .tb .o {margin-right:0;margin-left:10px;font-size:12px !important}
.dz_tbnvb .tb .o a {padding:0 10px;background:var(--dz-btnbga);font-size:12px !important;color:var(--dz-btntxt)}
.dz_tbnvb .tb .kmfa_rss {margin-top:0;padding-left:20px !important;background-position:0 3px !important}
.dz_tbnvb .tb .y {margin-right:0}
.dz_tbnvb .tb .y:after {display:none}
.dz_tbnvb .tb .showmenu:after {content:"";position:static;bottom:auto;display:inline-block;margin:0 0 0 4px;width:auto;height:auto;background:none;border-radius:0}

.dz_wide.dz_tbnva .tb .o, .dz_wide.dz_tbnva .tb .y select {float:right;padding-right:0;margin:0 0 0 10px}

.dz_wide .tb {height:40px;line-height:20px;padding-left:0;    margin-top: 20px;}
.dz_wide .tb li {margin-right:10px;height:40px;margin-bottom:0}
.dz_wide .tb a {background:none;border:none;padding:0 5px;font-size:15px;}
.dz_wide .tb .a:after, .dz_wide .tb .current:after {content:"";position:relative;bottom:-8px;display:flex;margin:0 auto;width:20px;height:3px; background:var(--dz-nvbg);border-radius:var(--dz-radius-s)}
.dz_wide .tb .a a, .dz_wide .tb .current a{color:var(--dz-nvbg);}
.dz_wide .tb .o {margin-right:0;margin-left:10px}
.dz_wide .tb .o a {padding:0 10px;background:var(--dz-btnbg);}
.dz_wide .tb .kmfa_rss {margin-top:0;padding-left:20px !important;background-position:0 3px !important}
.dz_wide .tb .y {margin-right:0}
.dz_wide .tb .showmenu:after {content:"";position:static;bottom:auto;display:inline-block;margin:0 auto;width:auto;height:auto;background:none;border-radius:0}

.fl .bm {border-top:1px double var(--dz-borderb)}
.fl .bm_h {background:none;border:none}
.bbs {border-bottom:1px solid var(--dz-borderb) !important}
.bmw .bm_h {background:linear-gradient(to bottom, #FFF, var(--dz-borderb));border-top:none;border-left:none;border-right:none;border-bottom:1px solid var(--dz-borderb)}
.bm_h {padding:0 20px;height:50px;line-height:50px;background:var(--dz-bgf);border-top:none;border-bottom:1px solid var(--dz-borderb)}
.bm_h h3, .bm_h h2, .bm_h h1 {font-size:16px !important;font-weight:400}
.bm_h h3, .bm_h h2, .bm_h h1, .dz_uactive_profile h2.mbn, .ct2_a h1.mt, .dz_uactive_rbox .bm .bm_h h2, .dz_viewtitle h2, .frame-title, .title, .drag .block .title, .dz_xb_title, .dz_lactive_tinfo .km_nameico {position:relative;z-index:1}
.bmw .bm_h a, .bm_h h3 a, .bm_h h2 a, .bm_h h1 a {color:var(--dz-fa)}
.bmw .bm_h a:hover, .bm_h h3 a:hover, .bm_h h2 a:hover, .bm_h h1 a:hover {color:var(--dz-ahover)}
.bm_h .o {float:right;position:relative;z-index:2}
.bm_h .o img, .bm_h .o em {margin-top:20px;background:none}
.bm_h .o em {font-size:26px}
.bm_h .o em.tg_no {color:var(--dz-ahot)}
.bm_h .y {position:relative;z-index:10}
.bm_h .y a {color:var(--dz-fc)}
.bm {background:var(--dz-bgf);border-color:var(--dz-borderb);}
.bm_c {padding:15px 20px 20px}


/* 头部开始 */
input:focus{border-color:var(--dz-nvbg);outline:0}
.rotateInFiniteOne{-webkit-transform-origin:50% 50%;transform-origin:50% 50%;-webkit-animation:rotateInFiniteOne 3s linear infinite;animation:rotateInFiniteOne 3s linear infinite;}
@-webkit-keyframes rotateInFiniteOne{0%{-webkit-transform:rotateZ(0deg);opacity:1;}
    100%{-webkit-transform: rotateZ(360deg);opacity:1;}
}

@keyframes rotateInFiniteOne{0%{-webkit-transform:rotateZ(0deg);transform:rotateZ(0deg);opacity:1;}
    100%{-webkit-transform: rotateZ(360deg);transform:rotateZ(360deg);opacity:1;}
}

.rotateInFiniteOne{-webkit-transform-origin:50% 50%;transform-origin:50% 50%;-webkit-animation:rotateInFiniteOne 110s linear infinite;animation:rotateInFiniteOne 110s linear infinite;}
.avt{transition:all .15s ease-out;-webkit-transition:all .15s ease-out;-moz-transition:all .15s ease-out;-o-transition:all .15s ease-out;}
.avt:hover{transform:scale(1.07);-webkit-transform:scale(1.07);-moz-transform:scale(1.07);-o-transform:scale(1.07);}

.frame-1{background-color:transparent !important;background-image:none !important;border:0 none !important;margin:0 !important;padding:0 !important;border-width:0px;height:auto }
.frame-1-c{background-color:transparent !important;background-image:none !important;border:0 none !important;margin:0 !important;padding:0 !important;border-width:0px;height:auto;}
/* .move-span{background-image:none !important;border:0 none !important;margin:0 !important;padding:0 !important;border-width:0px;height:auto;}
/* ... */

